# statically_typed_programming_student

./: .gitignore  CMakeLists.txt  README.md  main.cpp
